# strava-ingestion

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.http  run_strava.py  tox.toml
.github/workflows/: run_strava_ingestion_workflow.yml
app/: main.py  message_manager.py  models.py
strava/: api.py  models.py
strava/sources/: activities.py
terraform/: main.tf
tests/app/: test_main.py  test_message_manager.py  test_models.py
