[project]
name = "strava-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.54",
    "fastapi[standard]>=0.115.4",
]

[tool.uv]
dev-dependencies = [
    "boto3-stubs[sns,sqs]>=1.35.54",
    "moto[sns,sqs]>=5.0.19",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    ".tox"
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "UP"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
